fixtures/errors/symbol_for_symbol_throws.js
try {
  Symbol.for(Symbol("x"));
  console.log("no-throw");
} catch (e) {
  console.log("caught-name:", e.name);
}